--- a/weathercastv3.04/app/src/main/res/values/strings.xml
+++ b/weathercastv3.04/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
     <string name="pref_units_imperial" translatable="false">imperial</string>
     <string name="action_map">Map Location</string>
+    <string name="action_share">Share</string>
+    <string name="detail_txt">Detail</string>
 </resources>
